tests/baselines/reference/parserPropertySignature2(strict=true).errors.txt
parserPropertySignature2.ts(2,3): error TS7008: Member 'B' implicitly has an 'any' type.


==== parserPropertySignature2.ts (1 errors) ====
    interface I {
      B?;
      ~
!!! error TS7008: Member 'B' implicitly has an 'any' type.
    }